# CoralEngine

./: .gitignore  CMakeLists.txt  README.md  config.h.in
coral_core/: CMakeLists.txt
coral_core/include/: application.h  config.h  entity.h  scenegraph.h  transform.h  window.h
coral_core/include/platform/: windows_platform.h
coral_core/include/resources/: asset.h  resourcemanager.h
coral_core/source/: application.cpp  entity.cpp
coral_core/source/platform/: windows_platform.cpp
coral_core/source/resources/: asset.cpp  resourcemanager.cpp
sandbox/: CMakeLists.txt
sandbox/source/: main.cpp
